objects/Channel_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Opportunities</relationshipLabel>
        <relationshipName>Channel_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <formula>Location__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <formula>Location__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location__r.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>&quot;Lookup to a Location object&apos;s record.
This field is a lookup to an existing Location child record when a parent Business Relationship record is selected in the existing &quot;&quot;Partner&quot;&quot; field.This is in support to attaching an Opportunity to a Partner Site.&quot;</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Associated Opportunities</relationshipLabel>
        <relationshipName>Alliance_and_Channel_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Alliance and Channel Partners</relationshipLabel>
        <relationshipName>Channel_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Partner_Account_Role1__c</fullName>
        <formula>Channel_Partner__r.MDCP_Business_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Role2__c</fullName>
        <label>Business Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Role__c</fullName>
        <label>Partner Account Role</label>
        <picklist>
            <picklistValues>
                <fullName>Implementer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourcer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <formula>TEXT( Channel_Partner__r.Partner_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <formula>IF(INCLUDES(Channel_Partner__r.Regions__c,&quot;EMEA&quot;), &quot;EMEA,&quot;, &quot;&quot;) &amp;
IF(INCLUDES(Channel_Partner__r.Regions__c,&quot;APJ&quot;), &quot;APJ,&quot;, &quot;&quot;) &amp;
IF(INCLUDES(Channel_Partner__r.Regions__c,&quot;AMS&quot;), &quot;AMS,&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select if this partner sourced the deal AND the &quot;deal source&quot; field is identified as &quot;partner&quot;</inlineHelpText>
        <label>Sourced</label>
        <type>Checkbox</type>
    </fields>
    <label>Alliance and Channel Partners</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Partner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance and Channel Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Alliance_Partner_Cannot_Primary</fullName>
        <active>true</active>
        <description>Alliance partner cannot be primary</description>
        <errorConditionFormula>IF( $Setup.Global_Config__c.Mute_Validation_Rule__c==true,false,if(Text( Partner_Type__c) ==&apos;Alliance Partner&apos; &amp;&amp;  Primary__c ==true, true,false))</errorConditionFormula>
        <errorMessage>Alliance Partner Cannot be Primary</errorMessage>
    </validationRules>
</CustomObject>